add filtering data elements on event list and back to event home form event biew

--- a/src/pages/event-capture-home/event-capture-home.html
+++ b/src/pages/event-capture-home/event-capture-home.html
@@ -74,17 +74,17 @@
       <div *ngIf="isAllParameterSet">
         <ion-row>
           <ion-col width-33>
-            <button ion-button small full (click)="showFieldSelectionMenu()">
+            <button ion-button full (click)="showFieldSelectionMenu()">
               <ion-icon name="grid"></ion-icon>
             </button>
           </ion-col>
           <ion-col width-33>
-            <button ion-button small full (click)="reLoadingEventList()">
+            <button ion-button full (click)="reLoadingEventList()">
               <ion-icon name="refresh"></ion-icon>
             </button>
           </ion-col>
           <ion-col width-33>
-            <button ion-button small full (click)="goToEventRegister()">
+            <button ion-button full (click)="goToEventRegister()">
               <ion-icon name="add"></ion-icon>
             </button>
           </ion-col>
