--- a/src/pages/data-entry-home/data-entry-home.html
+++ b/src/pages/data-entry-home/data-entry-home.html
@@ -75,7 +75,7 @@
             </ion-row>
           </div>
           <div *ngIf="selectedPeriod.name && hasDataDimensionSet()">
-            <ion-card >
+            <ion-card (click)="goToEntryForm()">
               <ion-card-content>
                 <p><b>Form</b> : {{ selectedDataSetLabel }}</p>
                 <p><b>Organisation Unit</b> : {{ selectedOrganisationUnitLabel }}</p>
