--- a/src/pages/update-manager-home/update-manager-home.html
+++ b/src/pages/update-manager-home/update-manager-home.html
@@ -13,6 +13,29 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding class="updateManager">
+  <div *ngIf="loadingData">
+    <ion-list>
+      <ion-item *ngFor="let message of loadingMessages; let currentIndex = index">
+        {{ message }}
+        <ion-icon *ngIf="(currentIndex + 1) < loadingMessages.length" name="done-all" item-right color="primary"></ion-icon>
+        <div style="text-align: center" item-right *ngIf="(currentIndex + 1) >= loadingMessages.length">
+          <ion-spinner name="crescent" color="secondary"></ion-spinner>
+        </div>
+      </ion-item>
+    </ion-list>
+  </div>
+
+  <div *ngIf="!loadingData">
+    {{ resources|json}}
+    <ion-list >
+      <div *ngFor="let resourceObject of resources">
+        <ion-item>
+          <ion-label>{{ resourceObject.displayName }}</ion-label>
+          <ion-checkbox [(ngModel)]="resourceObject.status" color="favorite"></ion-checkbox>
+        </ion-item>
+      </div>
+    </ion-list>
+  </div>
 
 </ion-content>
