add service for update resources

--- a/src/pages/event-field-selection-menu/event-field-selection-menu.html
+++ b/src/pages/event-field-selection-menu/event-field-selection-menu.html
@@ -22,7 +22,7 @@
   <ion-grid>
     <ion-row>
       <ion-col width="50">
-        <button ion-button full (click)="onSavingChanges()">Done</button>
+        <button ion-button full (click)="onSavingChanges()">Update</button>
       </ion-col>
       <ion-col width="50">
         <button ion-button full (click)="autoSelect('selectAll')" *ngIf="!hasAllSelected"> Select All</button>
