--- a/src/pages/organisation-units/organisation-units.html
+++ b/src/pages/organisation-units/organisation-units.html
@@ -11,76 +11,70 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding class = "organisation-units">
-  <ion-grid>
-    <ion-row>
-      <ion-col width="100">
-        <div *ngIf="loadingData">
-          <ion-list>
-            <ion-item *ngFor="let message of loadingMessages; let currentIndex = index">
-              {{ message }}
-              <ion-icon *ngIf="(currentIndex + 1) < loadingMessages.length" name="done-all" item-right></ion-icon>
-              <div style="text-align: center" item-right *ngIf="(currentIndex + 1) >= loadingMessages.length">
-                <ion-spinner name="crescent"></ion-spinner>
-              </div>
-            </ion-item>
-          </ion-list>
+<ion-content class = "organisation-units">
+  <div *ngIf="loadingData">
+    <ion-list>
+      <ion-item *ngFor="let message of loadingMessages; let currentIndex = index">
+        {{ message }}
+        <ion-icon *ngIf="(currentIndex + 1) < loadingMessages.length" name="done-all" item-right></ion-icon>
+        <div style="text-align: center" item-right *ngIf="(currentIndex + 1) >= loadingMessages.length">
+          <ion-spinner name="crescent"></ion-spinner>
         </div>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+      </ion-item>
+    </ion-list>
+  </div>
 
   <div *ngIf="!loadingData" >
     <div *ngFor="let orgUnit of organisationUnitsList">
       <ion-item>
-        <ion-icon name="ios-arrow-forward" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && !hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
-        <ion-icon name="ios-arrow-down" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
-        <ion-icon name="ios-folder-outline" *ngIf="orgUnit.children.length==0" item-left></ion-icon>
+        <ion-icon name="ios-add-circle-outline" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && !hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
+        <ion-icon name="ios-remove-circle-outline" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
+        <!--<ion-icon name="ios-folder-outline" *ngIf="orgUnit.children.length==0" item-left></ion-icon>-->
         <span (click)="setSelectedOrgUnit(orgUnit)" [color]="(currentSelectedOrgUnitName == orgUnit.name) ?'current' : 'dark'"  >{{ orgUnit.name }}</span>
       </ion-item>
       <div *ngIf="hasOrgUnitChildrenOpened[orgUnit.id]" style="padding-left: 10px">
 
         <div *ngFor="let orgUnit of orgUnit.children">
           <ion-item>
-            <ion-icon name="ios-arrow-forward" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && !hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
-            <ion-icon name="ios-arrow-down" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
-            <ion-icon name="ios-folder-outline" *ngIf="orgUnit.children.length==0" item-left></ion-icon>
+            <ion-icon name="ios-add-circle-outline" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && !hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
+            <ion-icon name="ios-remove-circle-outline" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
+            <!--<ion-icon name="ios-folder-outline" *ngIf="orgUnit.children.length==0" item-left></ion-icon>-->
             <span (click)="setSelectedOrgUnit(orgUnit)" [color]="(currentSelectedOrgUnitName == orgUnit.name) ?'current' : 'dark'" >{{ orgUnit.name }}</span>
           </ion-item>
           <div *ngIf="hasOrgUnitChildrenOpened[orgUnit.id]" style="padding-left: 10px">
 
             <div *ngFor="let orgUnit of orgUnit.children">
               <ion-item>
-                <ion-icon name="ios-arrow-forward" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && !hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
-                <ion-icon name="ios-arrow-down" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
-                <ion-icon name="ios-folder-outline" *ngIf="orgUnit.children.length==0" item-left></ion-icon>
+                <ion-icon name="ios-add-circle-outline" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && !hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
+                <ion-icon name="ios-remove-circle-outline" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
+                <!--<ion-icon name="ios-folder-outline" *ngIf="orgUnit.children.length==0" item-left></ion-icon>-->
                 <span (click)="setSelectedOrgUnit(orgUnit)" [color]="(currentSelectedOrgUnitName == orgUnit.name) ?'current' : 'dark'"  >{{ orgUnit.name }}</span>
               </ion-item>
               <div *ngIf="hasOrgUnitChildrenOpened[orgUnit.id]" style="padding-left: 10px">
 
                 <div *ngFor="let orgUnit of orgUnit.children">
                   <ion-item>
-                    <ion-icon name="ios-arrow-forward" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && !hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
-                    <ion-icon name="ios-arrow-down" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
-                    <ion-icon name="ios-folder-outline" *ngIf="orgUnit.children.length==0" item-left></ion-icon>
+                    <ion-icon name="ios-add-circle-outline" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && !hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
+                    <ion-icon name="ios-remove-circle-outline" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
+                    <!--<ion-icon name="ios-folder-outline" *ngIf="orgUnit.children.length==0" item-left></ion-icon>-->
                     <span (click)="setSelectedOrgUnit(orgUnit)" [color]="(currentSelectedOrgUnitName == orgUnit.name) ?'current' : 'dark'" >{{ orgUnit.name }}</span>
                   </ion-item>
                   <div *ngIf="hasOrgUnitChildrenOpened[orgUnit.id]" style="padding-left: 10px">
 
                     <div *ngFor="let orgUnit of orgUnit.children">
                       <ion-item>
-                        <ion-icon name="ios-arrow-forward" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && !hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
-                        <ion-icon name="ios-arrow-down" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
-                        <ion-icon name="ios-folder-outline" *ngIf="orgUnit.children.length==0" item-left></ion-icon>
+                        <ion-icon name="ios-add-circle-outline" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && !hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
+                        <ion-icon name="ios-remove-circle-outline" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
+                        <!--<ion-icon name="ios-folder-outline" *ngIf="orgUnit.children.length==0" item-left></ion-icon>-->
                         <span (click)="setSelectedOrgUnit(orgUnit)" [color]="(currentSelectedOrgUnitName == orgUnit.name) ?'current' : 'dark'" >{{ orgUnit.name }}</span>
                       </ion-item>
                       <div *ngIf="hasOrgUnitChildrenOpened[orgUnit.id]" style="padding-left: 10px">
 
                         <div *ngFor="let orgUnit of orgUnit.children">
                           <ion-item>
-                            <ion-icon name="ios-arrow-forward" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && !hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
-                            <ion-icon name="ios-arrow-down" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
-                            <ion-icon name="ios-folder-outline" *ngIf="orgUnit.children.length==0" item-left></ion-icon>
+                            <ion-icon name="ios-add-circle-outline" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && !hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
+                            <ion-icon name="ios-remove-circle-outline" (click)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
+                            <!--<ion-icon name="ios-folder-outline" *ngIf="orgUnit.children.length==0" item-left></ion-icon>-->
                             <span (click)="setSelectedOrgUnit(orgUnit)" [color]="(currentSelectedOrgUnitName == orgUnit.name) ?'current' : 'dark'" >{{ orgUnit.name }}</span>
                           </ion-item>
                           <div *ngIf="hasOrgUnitChildrenOpened[orgUnit.id]" style="padding-left: 10px">
